# OpenJTD

./: .gitignore  README.ja.md  README.md  TODO.ja.md  TODO.md
.github/workflows/: deploy-viewer.yml
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  CHARTER.ja.md  CHARTER.md  ICHITARO-FILTER-RESEARCH.ja.md  ICHITARO-FILTER-RESEARCH.md  RHWP-COMPATIBILITY.ja.md  RHWP-COMPATIBILITY.md  ROADMAP.ja.md  ROADMAP.md
openjtd-samples/: README.ja.md  README.md
openjtd-spec/: README.ja.md  README.md
openjtd-spec/rfc/: 0001-container.ja.md  0001-container.md  0002-ichitaro-openoffice-filter.ja.md  0002-ichitaro-openoffice-filter.md  0003-document-text.ja.md  0003-document-text.md  0004-document-model-export.ja.md  0004-document-model-export.md  0005-jttc-just-compressed-document.ja.md  0005-jttc-just-compressed-document.md  0006-document-text-position-tables.ja.md  0006-document-text-position-tables.md  0007-layout-mark-streams.ja.md  0007-layout-mark-streams.md  0008-object-stream-candidates.ja.md  0008-object-stream-candidates.md  0009-document-text-paragraph-record.ja.md  0009-document-text-paragraph-record.md
openjtd.github.io/: README.ja.md  README.md  index.html  wrangler.toml
openjtd.github.io/pkg/: .gitignore  package.json  rjtd_wasm.d.ts  rjtd_wasm.js  rjtd_wasm_bg.wasm  rjtd_wasm_bg.wasm.d.ts
rjtd/: Cargo.toml  README.ja.md  README.md
rjtd-testdata/: README.ja.md  README.md
rjtd-testdata/local-samples/: README.ja.md  README.md
rjtd/crates/rjtd-cli/: Cargo.toml
rjtd/crates/rjtd-cli/src/: main.rs
rjtd/crates/rjtd-cli/tests/: streams.rs
rjtd/crates/rjtd-core/: Cargo.toml
rjtd/crates/rjtd-core/src/: compressed_document.rs  container.rs  document_text.rs  document_text_position.rs  error.rs  font_stream.rs  format.rs  layout_mark.rs  lha.rs  lib.rs  record.rs  stream.rs  style_stream.rs
rjtd/crates/rjtd-export/: Cargo.toml
rjtd/crates/rjtd-export/src/: lib.rs
rjtd/crates/rjtd-model/: Cargo.toml
rjtd/crates/rjtd-model/src/: lib.rs
rjtd/crates/rjtd-testkit/: Cargo.toml
rjtd/crates/rjtd-testkit/src/: lib.rs
rjtd/crates/rjtd-wasm/: Cargo.toml
rjtd/crates/rjtd-wasm/src/: lib.rs
scripts/: jtd2lawtext.ts
