[workspace]
members = [
    "crates/rjtd-core",
    "crates/rjtd-model",
    "crates/rjtd-export",
    "crates/rjtd-cli",
    "crates/rjtd-wasm",
    "crates/rjtd-testkit",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjtd-org/rjtd"

[workspace.lints.rust]
unsafe_code = "forbid"
