[package]
name = "rjtd-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
rjtd-core = { path = "../rjtd-core" }

[dev-dependencies]
cfb = "0.14"

[lints]
workspace = true
